# enkit

./: .gitignore  README.md  meson.build
include/cobol/: files.env.cpy  files.fd.cpy  files.status.cpy
include/enkit/: destroy.h  enkit.h  enviroment.h  error.h  in.h  init.h  out.h  render.h  reysub.h  runtime.h  types.h  utils.h
licenses/: enkit_copyright.txt
meson/: linux.native  macos.cross  win32.cross
script/: compile.sh
script/posix/: clean.sh  compile.sh  delete.sh  new-commit-history.sh  package.sh  setup.sh
script/win32/: clean.ps1  compile.ps1  delete.ps1  new-commit-history.ps1  setup.ps1
src/: meson.build
src/cobol/: ReyCreateRFS.cbl  meson.build  rfs.cbl
src/error/: error_01.c  meson.build
src/io/: file_in.c  file_out.c  meson.build
src/main/: enkit.c  enviroment.c  ergo_runtime.c  exis_runtime.c  meson.build  runtime.c
src/reymon/: menu.c  meson.build  rfs.c  screen.c
syntax/: cobol-ibm.sublime-syntax
