# **********************
# *** Subdirectories ***
# **********************

subdir('io')
subdir('main')
subdir('error')
subdir('cobol')
subdir('reymon')

# ********************
# *** Header files ***
# ********************

enkit_headers = [
	'include/enkit/in.h',
	'include/enkit/out.h',

	'include/enkit/init.h',
	'include/enkit/enkit.h',
	
	'include/enkit/types.h',
	'include/enkit/error.h',
	'include/enkit/utils.h',

	'include/enkit/render.h',
	'include/enkit/reysub.h',
	
	'include/enkit/destroy.h',
	'include/enkit/runtime.h',
	'include/enkit/enviroment.h'
]

# *****************
# *** All files ***
# *****************

enkit_files = enkit_main_sources + enkit_headers